src/libqfiledialog.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QAbstractProxyModel QAbstractProxyModel;
typedef struct QDir QDir;
typedef struct QEvent QEvent;
typedef struct QFileDialog QFileDialog;
typedef struct QFileIconProvider QFileIconProvider;
typedef struct QMetaObject QMetaObject;
typedef struct QUrl QUrl;
typedef struct QWidget QWidget;
QFileDialog* QFileDialog_new(QWidget* parent);
QFileDialog* QFileDialog_new2(QWidget* parent, int f);
QFileDialog* QFileDialog_new3();
QFileDialog* QFileDialog_new4(QWidget* parent, libqt_string caption);
QFileDialog* QFileDialog_new5(QWidget* parent, libqt_string caption, libqt_string directory);
QFileDialog* QFileDialog_new6(QWidget* parent, libqt_string caption, libqt_string directory, libqt_string filter);
QMetaObject* QFileDialog_MetaObject(const QFileDialog* self);
void* QFileDialog_Metacast(QFileDialog* self, const char* param1);
int QFileDialog_Metacall(QFileDialog* self, int param1, int param2, void** param3);
libqt_string QFileDialog_Tr(const char* s);
void QFileDialog_SetDirectory(QFileDialog* self, libqt_string directory);
void QFileDialog_SetDirectoryWithDirectory(QFileDialog* self, QDir* directory);
QDir* QFileDialog_Directory(const QFileDialog* self);
void QFileDialog_SetDirectoryUrl(QFileDialog* self, QUrl* directory);
QUrl* QFileDialog_DirectoryUrl(const QFileDialog* self);
void QFileDialog_SelectFile(QFileDialog* self, libqt_string filename);
libqt_list /* of libqt_string */ QFileDialog_SelectedFiles(const QFileDialog* self);
void QFileDialog_SelectUrl(QFileDialog* self, QUrl* url);
libqt_list /* of QUrl* */ QFileDialog_SelectedUrls(const QFileDialog* self);
void QFileDialog_SetNameFilter(QFileDialog* self, libqt_string filter);
void QFileDialog_SetNameFilters(QFileDialog* self, libqt_list /* of libqt_string */ filters);
libqt_list /* of libqt_string */ QFileDialog_NameFilters(const QFileDialog* self);
void QFileDialog_SelectNameFilter(QFileDialog* self, libqt_string filter);
libqt_string QFileDialog_SelectedMimeTypeFilter(const QFileDialog* self);
libqt_string QFileDialog_SelectedNameFilter(const QFileDialog* self);
void QFileDialog_SetMimeTypeFilters(QFileDialog* self, libqt_list /* of libqt_string */ filters);
libqt_list /* of libqt_string */ QFileDialog_MimeTypeFilters(const QFileDialog* self);
void QFileDialog_SelectMimeTypeFilter(QFileDialog* self, libqt_string filter);
int QFileDialog_Filter(const QFileDialog* self);
void QFileDialog_SetFilter(QFileDialog* self, int filters);
void QFileDialog_SetViewMode(QFileDialog* self, int mode);
int QFileDialog_ViewMode(const QFileDialog* self);
void QFileDialog_SetFileMode(QFileDialog* self, int mode);
int QFileDialog_FileMode(const QFileDialog* self);
void QFileDialog_SetAcceptMode(QFileDialog* self, int mode);
int QFileDialog_AcceptMode(const QFileDialog* self);
void QFileDialog_SetSidebarUrls(QFileDialog* self, libqt_list /* of QUrl* */ urls);
libqt_list /* of QUrl* */ QFileDialog_SidebarUrls(const QFileDialog* self);
libqt_string QFileDialog_SaveState(const QFileDialog* self);
bool QFileDialog_RestoreState(QFileDialog* self, libqt_string state);
void QFileDialog_SetDefaultSuffix(QFileDialog* self, libqt_string suffix);
libqt_string QFileDialog_DefaultSuffix(const QFileDialog* self);
void QFileDialog_SetHistory(QFileDialog* self, libqt_list /* of libqt_string */ paths);
libqt_list /* of libqt_string */ QFileDialog_History(const QFileDialog* self);
void QFileDialog_SetItemDelegate(QFileDialog* self, QAbstractItemDelegate* delegate);
QAbstractItemDelegate* QFileDialog_ItemDelegate(const QFileDialog* self);
void QFileDialog_SetIconProvider(QFileDialog* self, QFileIconProvider* provider);
QFileIconProvider* QFileDialog_IconProvider(const QFileDialog* self);
void QFileDialog_SetLabelText(QFileDialog* self, int label, libqt_string text);
libqt_string QFileDialog_LabelText(const QFileDialog* self, int label);
void QFileDialog_SetSupportedSchemes(QFileDialog* self, libqt_list /* of libqt_string */ schemes);
libqt_list /* of libqt_string */ QFileDialog_SupportedSchemes(const QFileDialog* self);
void QFileDialog_SetProxyModel(QFileDialog* self, QAbstractProxyModel* model);
QAbstractProxyModel* QFileDialog_ProxyModel(const QFileDialog* self);
void QFileDialog_SetOption(QFileDialog* self, int option);
bool QFileDialog_TestOption(const QFileDialog* self, int option);
void QFileDialog_SetOptions(QFileDialog* self, int options);
int QFileDialog_Options(const QFileDialog* self);
void QFileDialog_SetVisible(QFileDialog* self, bool visible);
void QFileDialog_FileSelected(QFileDialog* self, libqt_string file);
void QFileDialog_FilesSelected(QFileDialog* self, libqt_list /* of libqt_string */ files);
void QFileDialog_CurrentChanged(QFileDialog* self, libqt_string path);
void QFileDialog_DirectoryEntered(QFileDialog* self, libqt_string directory);
void QFileDialog_UrlSelected(QFileDialog* self, QUrl* url);
void QFileDialog_UrlsSelected(QFileDialog* self, libqt_list /* of QUrl* */ urls);
void QFileDialog_CurrentUrlChanged(QFileDialog* self, QUrl* url);
void QFileDialog_DirectoryUrlEntered(QFileDialog* self, QUrl* directory);
void QFileDialog_FilterSelected(QFileDialog* self, libqt_string filter);
libqt_string QFileDialog_GetOpenFileName();
QUrl* QFileDialog_GetOpenFileUrl();
libqt_string QFileDialog_GetSaveFileName();
QUrl* QFileDialog_GetSaveFileUrl();
libqt_string QFileDialog_GetExistingDirectory();
QUrl* QFileDialog_GetExistingDirectoryUrl();
libqt_list /* of libqt_string */ QFileDialog_GetOpenFileNames();
libqt_list /* of QUrl* */ QFileDialog_GetOpenFileUrls();
void QFileDialog_SaveFileContent(libqt_string fileContent, libqt_string fileNameHint);
void QFileDialog_Done(QFileDialog* self, int result);
void QFileDialog_Accept(QFileDialog* self);
void QFileDialog_ChangeEvent(QFileDialog* self, QEvent* e);
libqt_string QFileDialog_Tr2(const char* s, const char* c);
libqt_string QFileDialog_Tr3(const char* s, const char* c, int n);
void QFileDialog_SetOption2(QFileDialog* self, int option, bool on);
libqt_string QFileDialog_GetOpenFileName1(QWidget* parent);
libqt_string QFileDialog_GetOpenFileName2(QWidget* parent, libqt_string caption);
libqt_string QFileDialog_GetOpenFileName3(QWidget* parent, libqt_string caption, libqt_string dir);
libqt_string QFileDialog_GetOpenFileName4(QWidget* parent, libqt_string caption, libqt_string dir, libqt_string filter);
QUrl* QFileDialog_GetOpenFileUrl1(QWidget* parent);
QUrl* QFileDialog_GetOpenFileUrl2(QWidget* parent, libqt_string caption);
QUrl* QFileDialog_GetOpenFileUrl3(QWidget* parent, libqt_string caption, QUrl* dir);
QUrl* QFileDialog_GetOpenFileUrl4(QWidget* parent, libqt_string caption, QUrl* dir, libqt_string filter);
libqt_string QFileDialog_GetSaveFileName1(QWidget* parent);
libqt_string QFileDialog_GetSaveFileName2(QWidget* parent, libqt_string caption);
libqt_string QFileDialog_GetSaveFileName3(QWidget* parent, libqt_string caption, libqt_string dir);
libqt_string QFileDialog_GetSaveFileName4(QWidget* parent, libqt_string caption, libqt_string dir, libqt_string filter);
QUrl* QFileDialog_GetSaveFileUrl1(QWidget* parent);
QUrl* QFileDialog_GetSaveFileUrl2(QWidget* parent, libqt_string caption);
QUrl* QFileDialog_GetSaveFileUrl3(QWidget* parent, libqt_string caption, QUrl* dir);